check_output.txt
    Checking only-bt-scan v0.1.0 (C:\projekty\only-bt-scan)
warning: unused import: `crate::mac_address_handler::MacAddress`
  --> src\data_flow_estimator.rs:13:5
   |
13 | use crate::mac_address_handler::MacAddress;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `crate::windows_bluetooth::windows_bt::DeviceEvent`
 --> src\device_events.rs:9:5
  |
9 | use crate::windows_bluetooth::windows_bt::DeviceEvent;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `error`
  --> src\native_scanner.rs:11:24
   |
11 | use log::{info, debug, error};
   |                        ^^^^^

warning: unused import: `std::time::Duration`
  --> src\native_scanner.rs:12:5
   |
12 | use std::time::Duration;
   |     ^^^^^^^^^^^^^^^^^^^

warning: unused import: `error`
 --> src\pcap_exporter.rs:7:17
  |
7 | use log::{info, error};
  |                 ^^^^^

warning: unused import: `crate::data_models::RawPacketModel`
  --> src\telemetry.rs:10:5
   |
10 | use crate::data_models::RawPacketModel;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `BluetoothScanner`
  --> src\unified_scan.rs:10:32
   |
10 | use crate::bluetooth_scanner::{BluetoothScanner, BluetoothDevice, ScanConfig};
   |                                ^^^^^^^^^^^^^^^^

warning: unused import: `crate::packet_tracker::GlobalPacketTracker`
  --> src\unified_scan.rs:12:5
   |
12 | use crate::packet_tracker::GlobalPacketTracker;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::telemetry::TelemetryCollector`
  --> src\unified_scan.rs:15:5
   |
15 | use crate::telemetry::TelemetryCollector;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::data_models::RawPacketModel`
  --> src\unified_scan.rs:16:5
   |
16 | use crate::data_models::RawPacketModel;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `warn`
  --> src\unified_scan.rs:17:24
   |
17 | use log::{info, debug, warn};
   |                        ^^^^

warning: unused import: `tokio::sync::RwLock`
  --> src\unified_scan.rs:19:5
   |
19 | use tokio::sync::RwLock;
   |     ^^^^^^^^^^^^^^^^^^^

warning: unused imports: `error` and `warn`
  --> src\windows_bluetooth.rs:12:21
   |
12 |     use log::{info, warn, debug, error};
   |                     ^^^^         ^^^^^

warning: unused import: `DeviceType`
  --> src\windows_bluetooth.rs:14:53
   |
14 |     use crate::bluetooth_scanner::{BluetoothDevice, DeviceType, ServiceInfo};
   |                                                     ^^^^^^^^^^

warning: unused import: `chrono::Utc`
  --> src\windows_bluetooth.rs:15:9
   |
15 |     use chrono::Utc;
   |         ^^^^^^^^^^^

warning: unused imports: `error` and `warn`
  --> src\windows_hci.rs:11:28
   |
11 |     use log::{info, debug, warn, error};
   |                            ^^^^  ^^^^^

warning: unused import: `debug`
 --> src\core_bluetooth_integration.rs:7:23
  |
7 | use log::{info, warn, debug};
  |                       ^^^^^

warning: unused import: `warn`
 --> src\gatt_client.rs:1:24
  |
1 | use log::{debug, info, warn};
  |                        ^^^^

warning: unused import: `std::time::Duration`
 --> src\gatt_client.rs:5:5
  |
5 | use std::time::Duration;
  |     ^^^^^^^^^^^^^^^^^^^

warning: unused import: `warn`
  --> src\l2cap_analyzer.rs:13:17
   |
13 | use log::{info, warn};
   |                 ^^^^

warning: unused imports: `HciScanResult` and `HciScannerConfig`
 --> src\web_server.rs:6:38
  |
6 | use crate::hci_scanner::{HciScanner, HciScannerConfig, HciScanResult};
  |                                      ^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^

warning: unused import: `PcapExportStats`
 --> src\web_server.rs:7:57
  |
7 | use crate::pcap_exporter::{PcapExporter, HciPcapPacket, PcapExportStats};
  |                                                         ^^^^^^^^^^^^^^^

warning: unused import: `MacAddressFilter`
 --> src\web_server.rs:8:46
  |
8 | use crate::mac_address_handler::{MacAddress, MacAddressFilter};
  |                                              ^^^^^^^^^^^^^^^^

warning: variable does not need to be mutable
   --> src\unified_scan.rs:124:13
    |
124 |         let mut devices = Vec::new();
    |             ----^^^^^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
  --> src\windows_bluetooth.rs:33:17
   |
33 |             let mut result_devices = Vec::new();
   |                 ----^^^^^^^^^^^^^^
   |                 |
   |                 help: remove this `mut`

warning: variable does not need to be mutable
   --> src\bluetooth_scanner.rs:670:13
    |
670 |         let mut devices = Vec::new();
    |             ----^^^^^^^
    |             |
    |             help: remove this `mut`

error[E0308]: mismatched types
   --> src\data_flow_estimator.rs:243:17
    |
243 |               for (sig_len, sig) in std::iter::once(5)
    |  _________________^^^^^^^^^^^^^^____-
    | |                 |
    | |                 expected integer, found `(_, _)`
244 | |                 .chain(std::iter::once(3))
245 | |                 .chain(std::iter::once(2))
    | |__________________________________________- this is an iterator with items of type `{integer}`
    |
    = note: expected type `{integer}`
              found tuple `(_, _)`

warning: unused variable: `avg_size`
   --> src\data_flow_estimator.rs:195:13
    |
195 |         let avg_size = if packets.len() > 0 {
    |             ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_avg_size`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `event_listener`
   --> src\device_events.rs:112:5
    |
112 |     event_listener: Arc<DeviceEventListener>,
    |     ^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_event_listener`

warning: unused variable: `name`
   --> src\device_events.rs:156:17
    |
156 |                 name,
    |                 ^^^^ help: try ignoring the field: `name: _`

warning: unused variable: `scan_start`
   --> src\bluetooth_scanner.rs:123:13
    |
123 |         let scan_start = std::time::SystemTime::now()
    |             ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_scan_start`

warning: variable does not need to be mutable
  --> src\scanner_integration.rs:31:17
   |
31 |             let mut packet = create_raw_packet_from_device(&device, packet_counter);
   |                 ----^^^^^^
   |                 |
   |                 help: remove this `mut`

warning: variable does not need to be mutable
   --> src\scanner_integration.rs:126:9
    |
126 |     let mut packet = RawPacketModel {
    |         ----^^^^^^
    |         |
    |         help: remove this `mut`

warning: unused variable: `service_data`
   --> src\ble_security.rs:121:5
    |
121 |     service_data: &[(String, Vec<u8>)],
    |     ^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_service_data`

warning: value assigned to `all_devices` is never read
   --> src\bluetooth_scanner.rs:371:31
    |
371 |         let mut all_devices = Vec::new();
    |                               ^^^^^^^^^^
    |
    = help: maybe it is overwritten before being read?
    = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `services_count`
   --> src\interactive_ui.rs:287:13
    |
287 |         let services_count = device.services.len();
    |             ^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_services_count`

warning: value assigned to `current_y` is never read
   --> src\interactive_ui.rs:350:5
    |
350 |     current_y += 1;
    |     ^^^^^^^^^^^^^^
    |
    = help: maybe it is overwritten before being read?

warning: unused variable: `mac_address`
   --> src\l2cap_analyzer.rs:284:9
    |
284 |         mac_address: &str,
    |         ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_mac_address`

warning: unused variable: `params`
   --> src\link_layer.rs:255:5
    |
255 |     params: &LinkLayerParameters,
    |     ^^^^^^ help: if this is intentional, prefix it with an underscore: `_params`

warning: variable does not need to be mutable
   --> src\main.rs:225:9
    |
225 |     let mut event_rx: Option<tokio::sync::mpsc::UnboundedReceiver<device_events::DeviceEventNotification>> = None;
    |         ----^^^^^^^^
    |         |
    |         help: remove this `mut`

warning: unused variable: `scan_interval_mins`
  --> src\main.rs:76:9
   |
76 |     let scan_interval_mins = env::var("SCAN_INTERVAL_MINUTES")
   |         ^^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_scan_interval_mins`

warning: unused variable: `event_listener`
   --> src\main.rs:224:9
    |
224 |     let event_listener = unified_engine.get_event_listener();
    |         ^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_event_listener`

warning: unused variable: `event_rx`
   --> src\main.rs:225:9
    |
225 |     let mut event_rx: Option<tokio::sync::mpsc::UnboundedReceiver<device_events::DeviceEventNotification>> = None;
    |         ^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_event_rx`

For more information about this error, try `rustc --explain E0308`.
warning: `only-bt-scan` (bin "only-bt-scan") generated 42 warnings
error: could not compile `only-bt-scan` (bin "only-bt-scan") due to 1 previous error; 42 warnings emitted
